--- a/_posts/2019-10-04-HoloLens001.md
+++ b/_posts/2019-10-04-HoloLens001.md
@@ -8,12 +8,13 @@ comments: true
 
 # 홀로렌즈 UI 변경
 
-![image](https://user-images.githubusercontent.com/40852277/66184379-d2685500-e6b6-11e9-8e90-0fc4d557beb3.png)
-
 홀로렌즈 AR Controller의 직관성 및 조작의 편리성 향상을 위해, 기존의 오브젝트당 하나의 컨트롤러를 가지는 기존의 방식이 아닌, 하나의 컨트롤러로 다수의 오브젝트를 조종하는 형식으로 변경한다.
+
+![image](https://user-images.githubusercontent.com/40852277/66184379-d2685500-e6b6-11e9-8e90-0fc4d557beb3.png)
 
 이를 통해 메인매니저의 OnGazeEnter, OnGazeLeave, Update 함수등을 변경하였다.
 
+![image](/img/post/MR/title001.png);
 
 # 결과
 
