--- a/_posts/2019-10-04-HoloLens001.md
+++ b/_posts/2019-10-04-HoloLens001.md
@@ -51,9 +51,9 @@ using System.Collections.Generic;
 using UnityEngine;
 using UnityEngine.UI;
 
-//=============================================================================================================================
+//================================================================================
 //  ENUM 선언 | AR Remote Contoller Btn 클래스에서 버튼 구분을 위해 이용
-//=============================================================================================================================
+//================================================================================
 public enum EnumARReomoteContolUIBtnType {
     EnumARContolUIBtnType_MOVE = 1,
     EnumARContolUIBtnType_SHOW = 1 << 1,
@@ -66,85 +66,96 @@ public enum EnumARReomoteContolUIBtnType {
     EnumARContolUIBtnType_HIDDEN = 1 << 8,
 }
 
-//=============================================================================================================================
+//================================================================================
 //  AR Remote Controller | AR Control UI Handler 참고해서 구현
-//=============================================================================================================================
+//================================================================================
 public class ARRemoteController : MonoBehaviour {
-    //=========================================================================================================================
+    //============================================================================
     //  Public, Private 필드 선언
-    //=========================================================================================================================
+    //============================================================================
     public GameObject targetObject;                     // 바라본 물체
-    public Text objectNameTitle;                        // 바라본 물체의 이름을 적을 텍스트 필드
-    public GameObject[] buttonArr = new GameObject[7];  // 버튼 GameObject 저장하는 배열
+    public Text objectNameTitle;                        // 바라본 물체의 이름을
+                                                        // 적을 텍스트 필드
+    public GameObject[] buttonArr = new GameObject[7];  // 버튼 GameObject
+                                                        // 저장하는 배열
     public Sprite[] activeSprite = new Sprite[7];       // 활성화된 버튼 Sprite
     public Sprite[] inactiveSprite = new Sprite[7];     // 비활성화된 버튼 Sprite
 
     private bool isPartModel = false;                   // 파트모델인지 여부
     private bool isHyundaiModel = false;                // 현대 모델인지 여부
     private bool isShowing = true;                      // 물체를 보여줄지 여부
-    private ARRemoteControllerBtn[] buttonScriptArr = new ARRemoteControllerBtn[7];
+    private ARRemoteControllerBtn[] buttonScriptArr 
+                        = new ARRemoteControllerBtn[7];
                                                         // 버튼들의 Dictionary
-    private GestureAction gestureAction;                // 바라본 물체의 제스처 액션
-
-    private class TransformValue {                      // 원복시 사용할 transform 클래스
+    private GestureAction gestureAction;                // 바라본 물체의
+                                                        // 제스처 액션
+    private class TransformValue {                      // 원복시 사용할
+                                                        // transform 클래스
         public Vector3 localPosition;
         public Vector3 localScale;
         public Quaternion rotation;
     }
-    private TransformValue originalTransformValue = new TransformValue(); // 초기 transform 상태 저장용 변수
+    private TransformValue originalTransformValue = new TransformValue();
+                                                        // 초기 transform 상태
+                                                        // 저장용 변수
 
-    //=========================================================================================================================
+    //============================================================================
     //  Start 메소드
-    //=========================================================================================================================
+    //============================================================================
     public void Start() {
-        // GameObject인 buttonArr 에서 AR Remote Controller Btn 클래스만 꺼내서 따로 저장
+        // GameObject인 buttonArr에서 AR Remote Controller Btn
+        // 클래스만 꺼내서 따로 저장
         for (int i = 0; i < 7; i++)
-            buttonScriptArr[i] = buttonArr[i].GetComponent<ARRemoteControllerBtn>();
+            buttonScriptArr[i] =
+                 buttonArr[i].GetComponent<ARRemoteControllerBtn>();
 
         // 타겟의 분류에 따라, 버튼 활성도 다르게 처리
         foreach (ARRemoteControllerBtn button in buttonScriptArr) {
-            switch (button.buttonType) {
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_MOVE:
-                    button.SetOnClickARControlButton(OnClick_Move);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_SHOW:
-                    button.SetOnClickARControlButton(OnClick_Show);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ASSEMBLE:
-                    button.SetOnClickARControlButton(OnClick_Assemble);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_RESET:
-                    button.SetOnClickARControlButton(OnClick_Reset);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ANIMATION:
-                    button.SetOnClickARControlButton(OnClick_Animation);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ROTATE:
-                    button.SetOnClickARControlButton(OnClick_Rotate);
-                    break;
-                case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_REMOVE:
-                    button.SetOnClickARControlButton(OnClick_Remove);
-                    break;
-            }
+        switch (button.buttonType) {
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_MOVE:
+                button.SetOnClickARControlButton(OnClick_Move);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_SHOW:
+                button.SetOnClickARControlButton(OnClick_Show);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ASSEMBLE:
+                button.SetOnClickARControlButton(OnClick_Assemble);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_RESET:
+                button.SetOnClickARControlButton(OnClick_Reset);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ANIMATION:
+                button.SetOnClickARControlButton(OnClick_Animation);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_ROTATE:
+                button.SetOnClickARControlButton(OnClick_Rotate);
+                break;
+            case EnumARReomoteContolUIBtnType.EnumARContolUIBtnType_REMOVE:
+                button.SetOnClickARControlButton(OnClick_Remove);
+                break;
+        }
         }
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체를 바라봤을 경우, 리모컨이 제어할 대상 변경해주는 메소드
-    //=========================================================================================================================
+    //============================================================================
     public void ChangeObject (GameObject target) {
 
-        //=====================================================================================================================
+        //========================================================================
         //  새로 바라볼 경우, 관련된 필드들 초기화
-        //=====================================================================================================================
+        //========================================================================
         this.targetObject = target;
         this.isShowing = true;
         this.objectNameTitle.text = "3D MODEL CONTROLLER : " + target.name;
-        this.originalTransformValue.localScale = targetObject.transform.localScale;
-        this.originalTransformValue.localPosition = targetObject.transform.localPosition;
+        this.originalTransformValue.localScale = 
+                                            targetObject.transform.localScale;
+        this.originalTransformValue.localPosition = 
+                                        targetObject.transform.localPosition;
         this.originalTransformValue.rotation = targetObject.transform.rotation;
         // 제스처 액션 컴포넌트 초기화 (없으면 만듦)
-        if (!target.GetComponent<GestureAction>()) targetObject.AddComponent<GestureAction>();
+        if (!target.GetComponent<GestureAction>()) 
+            targetObject.AddComponent<GestureAction>();
         this.gestureAction = targetObject.GetComponent<GestureAction>();
 
         /*
@@ -157,18 +168,20 @@ public class ARRemoteController : MonoBehaviour {
         // 타겟의 분류에 따라, 버튼 활성도 다르게 처리
          if (target.tag == "PartModel_ImageTarget") {
              buttonScriptArr[0].SetOnClickARControlButton(null);
-             buttonArr[0].GetComponent<SpriteRenderer>().sprite = inactiveSprite[0];
+             buttonArr[0].GetComponent<SpriteRenderer>().sprite =
+                                                         inactiveSprite[0];
              buttonArr[0].GetComponent<BoxCollider>().enabled = false;
          } else {
             buttonScriptArr[0].SetOnClickARControlButton(OnClick_Move);
-            buttonArr[0].GetComponent<SpriteRenderer>().sprite = activeSprite[0];
+            buttonArr[0].GetComponent<SpriteRenderer>().sprite = 
+                                                        activeSprite[0];
              buttonArr[0].GetComponent<BoxCollider>().enabled = true;
          }
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체를 이동시키는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Move() {
         if (targetObject == null) return;
         Debug.Log("MOVE BUTTON CLICK");
@@ -177,56 +190,62 @@ public class ARRemoteController : MonoBehaviour {
             targetObject.GetComponent<Placeable>().OnPlacementStart();
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  렌더러를 토글시키는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Show() {
         if (targetObject == null) return;
         Debug.Log("SHOW BUTTON CLICK");
         isShowing = !isShowing;
         // Show 버튼의 경우, 바라보고 있는 오브젝트의 Mesh Renderer를 토글
-        foreach (MeshRenderer childMeshRenderer in targetObject.GetComponentsInChildren<MeshRenderer>()) {
+        foreach (MeshRenderer childMeshRenderer in
+                        targetObject.GetComponentsInChildren<MeshRenderer>()) {
             childMeshRenderer.enabled = isShowing;
         }
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체를 파츠로 분해 / 파츠를 물체로 재조립 하는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Assemble() {
         if (targetObject == null) return;
         Debug.Log("ASSEMBLE BUTTON CLICK");
         // AR Twin Model Assemble Handler를 이용
         if (targetObject.GetComponent<ARTwinModelAssembleHandler>()) {
-            int transformSendAssignType = (int)EnumTransformAssignType.EnumTransformAssignType_Assemble;
-            ARTwinModelAssembleHandler handler = targetObject.GetComponent<ARTwinModelAssembleHandler>();
+            int transformSendAssignType = 
+                (int)EnumTransformAssignType.EnumTransformAssignType_Assemble;
+            ARTwinModelAssembleHandler handler = 
+                        targetObject.GetComponent<ARTwinModelAssembleHandler>();
             int assembleState = handler.ProcAssmebleState();
-            CustomMessages.Instance.SendObjectTransform(targetObject,transformSendAssignType,
-                targetObject.transform,assembleState,0);
+            CustomMessages.Instance.
+                SendObjectTransform(targetObject,transformSendAssignType,
+                    targetObject.transform,assembleState,0);
         }
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체의 여러가지 상태를 초기 상태로 되돌리는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Reset() {
         if (targetObject == null) return;
         Debug.Log("RESET BUTTON CLICK");
         // 일단 Position / Rotation / Scale을 원복함
         targetObject.transform.rotation = originalTransformValue.rotation;
         targetObject.transform.localScale = originalTransformValue.localScale;
-        targetObject.transform.localPosition = originalTransformValue.localPosition;
+        targetObject.transform.localPosition = 
+                                        originalTransformValue.localPosition;
         // AR Twin Model Assemble Handler 리셋
-        foreach (ARTwinModelAssembleHandler handler in targetObject.GetComponentsInChildren<ARTwinModelAssembleHandler>())
+        foreach (ARTwinModelAssembleHandler handler in 
+            targetObject.GetComponentsInChildren<ARTwinModelAssembleHandler>())
             handler.ResetAssmebleState();
         // Button 의 상태도 초기화 시켜줌
         foreach (ARRemoteControllerBtn button in buttonScriptArr)
             button.ResetButtonColor();
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체가 가지고있는 애니메이션을 재생하는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Animation() {
         if (targetObject == null) return;
         Debug.Log("ANIMATION BUTTON CLICK");
@@ -234,9 +253,9 @@ public class ARRemoteController : MonoBehaviour {
         // @KimYC1223 애니메이션 재생되도록 설정
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체를 제스처 액션을 통해 회전 / 확대 / 축소 하는 버튼
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Rotate() {
         if (targetObject == null) return;
         Debug.Log("ROTATE BUTTON CLICK");
@@ -245,15 +264,17 @@ public class ARRemoteController : MonoBehaviour {
             gestureAction.StartStopGestureAction();
     }
 
-    //=========================================================================================================================
+    //============================================================================
     //  물체를 Active 상태를 비활성화 시키는 버튼 (Show Btn과 유사)
-    //=========================================================================================================================
+    //============================================================================
     public void OnClick_Remove() {
         if (targetObject == null) return;
         Debug.Log("REMOVE BUTTON CLICK");
         // 만약 Vuforia 기반 오브젝트라면, 리셋 해줌
-        if (GetComponentsInChildren<PartImageTargetTrackableEventHandler>().Length > 0) {
-            PartImageTargetTrackableEventHandler[] handlers = GetComponentsInChildren<PartImageTargetTrackableEventHandler>();
+        if (GetComponentsInChildren<PartImageTargetTrackableEventHandler>()
+                                                                .Length > 0) {
+            PartImageTargetTrackableEventHandler[] handlers = 
+                GetComponentsInChildren<PartImageTargetTrackableEventHandler>();
             foreach (PartImageTargetTrackableEventHandler handler in handlers)
                 handler.ResetFound();
         }
