Commit logo image

--- a/_posts/2019-10-04-HoloLens001.md
+++ b/_posts/2019-10-04-HoloLens001.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  HoloLens _ AR Controller UI 변경
+title:  HoloLens 컨트롤러 UI 변경
 tags: [HoloLens,Mixed Reality]
 image: /img/post/MR/title001.png
 comments: true
