No back ground image test

--- a/_posts/2019-09-15-javaCord001.md
+++ b/_posts/2019-09-15-javaCord001.md
@@ -2,6 +2,7 @@
 layout: post
 title:  JAVA _ 바이너리 출력
 tags: [cord,java]
+bigimg: /img/nobgimage.png
 ---
 
 프로그래밍을 하다 보면 바이너리 순열이 필요 할 때가 있다. 바이너리 순열은 단순히 00...00, 00...01, 00...10, 00...11같은 순열을 말한다. 예를 들어, 크기가 3인 바이너리 순열은 000,001,010,011,100,101,110,111이다. 아래는 바이너리 순열을 출력하는 java 코드이다.
@@ -11,7 +12,7 @@ tags: [cord,java]
 ``` java
 String[] initBinary(String[] arr,int N) {
     if (arr == null || N == 0 ) return null;
-    	
+
     for(int i = 0 ; i < arr.length; i++) {
         arr[i] = "";
         for (int k = 0 ; k < N ; k++)
@@ -20,13 +21,13 @@ String[] initBinary(String[] arr,int N) {
     return arr;
 }
 ```
-  
+
 다른 버전으로는 boolean[ ][ ]을 리턴하는 버전도 있다.
 
 ``` java
 void initBinary(boolean[][] caseCount) {
     if (caseCount.length == 0 || caseCount[0].length == 0) return;
-    	
+
     int cycle = caseCount[0].length;
     for(int i = 0 ; i < caseCount.length; i++) {
         for (int k = 0 ; k < cycle ; k++)
@@ -47,7 +48,7 @@ public class binaryCount implements Comparable<binaryCount>{
     String str;
     int elementCount;
     int real;
-    	
+
     public binaryCount(boolean[] input) {
     	this.length = input.length;
     	this.caseArr = input;
@@ -76,24 +77,24 @@ public class binaryCount implements Comparable<binaryCount>{
 }
 ```
 
-다음은 이를 사용하기 위한 코드이다. 
+다음은 이를 사용하기 위한 코드이다.
 
 ``` java
 public class Main {
 	  public static void main(String[] args) {
         int size = 4;
         int caseCount = (int) Math.pow(2,size);
-        
+
         boolean[][] allCase = new boolean[caseCount][size];
         initBinary(allCase);
-        
+
         ArrayList<binaryCount> caseList = new ArrayList<binaryCount>();
         for (int i = 0; i < testSet.length ; i++) {
         	caseList.add(new binaryCount(testSet[i]));
         }
-        
+
         caseList.sort(Comparator.naturalOrder());
-        
+
         // 출력
         for (int i = 0; i < caseList.size(); i ++ )
         	System.out.println(caseList.get(i).str + " : "+caseList.get(i).real);
