--- a/_posts/2019-10-04-HoloLens001.md
+++ b/_posts/2019-10-04-HoloLens001.md
@@ -3,6 +3,7 @@ layout: post
 title:  HoloLens 컨트롤러 UI 변경
 tags: [HoloLens,Mixed Reality]
 image: /img/post/MR/title001.png
+bigimg: /img/nobgimage.png
 comments: true
 ---
 
@@ -80,7 +81,7 @@ public class ARRemoteController : MonoBehaviour {
     private bool isPartModel = false;                   // 파트모델인지 여부
     private bool isHyundaiModel = false;                // 현대 모델인지 여부
     private bool isShowing = true;                      // 물체를 보여줄지 여부
-    private ARRemoteControllerBtn[] buttonScriptArr 
+    private ARRemoteControllerBtn[] buttonScriptArr
                         = new ARRemoteControllerBtn[7];
                                                         // 버튼들의 Dictionary
     private GestureAction gestureAction;                // 바라본 물체의
@@ -144,23 +145,23 @@ public class ARRemoteController : MonoBehaviour {
         this.targetObject = target;
         this.isShowing = true;
         this.objectNameTitle.text = "3D MODEL CONTROLLER : " + target.name;
-        this.originalTransformValue.localScale = 
+        this.originalTransformValue.localScale =
                                             targetObject.transform.localScale;
-        this.originalTransformValue.localPosition = 
+        this.originalTransformValue.localPosition =
                                         targetObject.transform.localPosition;
         this.originalTransformValue.rotation = targetObject.transform.rotation;
         // 제스처 액션 컴포넌트 초기화 (없으면 만듦)
-        if (!target.GetComponent<GestureAction>()) 
+        if (!target.GetComponent<GestureAction>())
             targetObject.AddComponent<GestureAction>();
         this.gestureAction = targetObject.GetComponent<GestureAction>();
 
         /*
-         * 
+         *
          * @kimYC1223
          * TO-DO : Tag에 따른 변수 설정 (isPartModel,isHyundaiModel)
          *
          */
-         
+
         // 타겟의 분류에 따라, 버튼 활성도 다르게 처리
          if (target.tag == "PartModel_ImageTarget") {
              buttonScriptArr[0].SetOnClickARControlButton(null);
@@ -169,7 +170,7 @@ public class ARRemoteController : MonoBehaviour {
              buttonArr[0].GetComponent<BoxCollider>().enabled = false;
          } else {
             buttonScriptArr[0].SetOnClickARControlButton(OnClick_Move);
-            buttonArr[0].GetComponent<SpriteRenderer>().sprite = 
+            buttonArr[0].GetComponent<SpriteRenderer>().sprite =
                                                         activeSprite[0];
              buttonArr[0].GetComponent<BoxCollider>().enabled = true;
          }
@@ -208,9 +209,9 @@ public class ARRemoteController : MonoBehaviour {
         Debug.Log("ASSEMBLE BUTTON CLICK");
         // AR Twin Model Assemble Handler를 이용
         if (targetObject.GetComponent<ARTwinModelAssembleHandler>()) {
-            int transformSendAssignType = 
+            int transformSendAssignType =
                 (int)EnumTransformAssignType.EnumTransformAssignType_Assemble;
-            ARTwinModelAssembleHandler handler = 
+            ARTwinModelAssembleHandler handler =
                         targetObject.GetComponent<ARTwinModelAssembleHandler>();
             int assembleState = handler.ProcAssmebleState();
             CustomMessages.Instance.
@@ -228,10 +229,10 @@ public class ARRemoteController : MonoBehaviour {
         // 일단 Position / Rotation / Scale을 원복함
         targetObject.transform.rotation = originalTransformValue.rotation;
         targetObject.transform.localScale = originalTransformValue.localScale;
-        targetObject.transform.localPosition = 
+        targetObject.transform.localPosition =
                                         originalTransformValue.localPosition;
         // AR Twin Model Assemble Handler 리셋
-        foreach (ARTwinModelAssembleHandler handler in 
+        foreach (ARTwinModelAssembleHandler handler in
             targetObject.GetComponentsInChildren<ARTwinModelAssembleHandler>())
             handler.ResetAssmebleState();
         // Button 의 상태도 초기화 시켜줌
@@ -269,7 +270,7 @@ public class ARRemoteController : MonoBehaviour {
         // 만약 Vuforia 기반 오브젝트라면, 리셋 해줌
         if (GetComponentsInChildren<PartImageTargetTrackableEventHandler>()
                                                                 .Length > 0) {
-            PartImageTargetTrackableEventHandler[] handlers = 
+            PartImageTargetTrackableEventHandler[] handlers =
                 GetComponentsInChildren<PartImageTargetTrackableEventHandler>();
             foreach (PartImageTargetTrackableEventHandler handler in handlers)
                 handler.ResetFound();
@@ -291,5 +292,3 @@ public class ARRemoteController : MonoBehaviour {
 - 현재 물체의 애니메이션이 없다. #116 이후에 수정 할 것.
 - 현재 설정 리셋과 분해/조립에 약간의 버그가 있다. 수정할 것.
 - 현재 버튼의 하이라이트 (트리거 버튼의 ON/OFF 표시)에 버그가 조금 있다. 수정 할 것.
-
-
