--- a/_posts/2019-10-14-WEB001.md
+++ b/_posts/2019-10-14-WEB001.md
@@ -11,7 +11,7 @@ HTML과 CSS를 활용하여 느낌있는 Login Page를 만들어보는 실습을
 
 # 결과 화면
 
-<iframe width="100%" height="300" src="//jsfiddle.net/kimyc1223/du3brtfj/15/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+<iframe width="100%" height="600" src="//jsfiddle.net/kimyc1223/du3brtfj/15/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
 # HTML
 
@@ -53,7 +53,7 @@ HTML과 CSS를 활용하여 느낌있는 Login Page를 만들어보는 실습을
 }
 
 body {
-  background: linear-gradient(75deg,#81ecec,#6c5ce7);
+  background-image: #636e72;
 }
 
 .loginForm {
