--- a/_posts/2019-10-14-WEB001.md
+++ b/_posts/2019-10-14-WEB001.md
@@ -11,7 +11,9 @@ HTML과 CSS를 활용하여 느낌있는 Login Page를 만들어보는 실습을
 
 # 결과 화면
 
-<iframe width="100%" height="600" src="//jsfiddle.net/kimyc1223/du3brtfj/15/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+<iframe width="100%" height="300" src="//jsfiddle.net/kimyc1223/du3brtfj/16/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+
+Chrome에서 확인 할 때 가장 잘 보인다.
 
 # HTML
 
@@ -53,7 +55,7 @@ HTML과 CSS를 활용하여 느낌있는 Login Page를 만들어보는 실습을
 }
 
 body {
-  background-image: #636e72;
+  background-image: #34495e;
 }
 
 .loginForm {
@@ -135,4 +137,4 @@ body {
 
 # 결과
 
-CSS 
+처음 시작하는 거라 신기했다. position과 linear-gradient, hover, transition 등의 사용법을 알게되었다.
