--- a/_posts/2019-10-14-WEB001.md
+++ b/_posts/2019-10-14-WEB001.md
@@ -11,7 +11,7 @@ HTML과 CSS를 활용하여 느낌있는 Login Page를 만들어보는 실습을
 
 # 결과 화면
 
-<iframe width="100%" height="300" src="//jsfiddle.net/kimyc1223/du3brtfj/16/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
+<iframe width="100%" height="800" src="//jsfiddle.net/kimyc1223/du3brtfj/16/embedded/result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
 
 Chrome에서 확인 할 때 가장 잘 보인다.
 
@@ -24,7 +24,7 @@ Chrome에서 확인 할 때 가장 잘 보인다.
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
 
-  <body>
+  <body width="100%" height="100%">
     <form action="index.html" method="post" class="loginForm">
       <h2>Login</h2>
       <div class="idForm">
@@ -33,7 +33,14 @@ Chrome에서 확인 할 때 가장 잘 보인다.
       <div class="passForm">
         <input type="password" class="pw" placeholder="PW">
       </div>
-      <button type="subbmit" class="btn">LOG IN</button>
+      <button type="button" class="btn" onclick="button()">
+        LOG IN
+      </button>
+      <script>
+      	let button = () => {
+        	alert('login Button !')
+        }
+      </script>
       <div class="bottomText">
         Don't you have ID? <a href="#">sign up</a>
       </div>
