--- a/_posts/2019-10-14-WEB001.md
+++ b/_posts/2019-10-14-WEB001.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  WEB 디자인 _ 로그인 페이지
-tags: [HTML,CSS WEB]
+tags: [HTML,CSS,WEB]
 image: /img/post/WEB/title001.png
 bigimg: /img/nobgimage.png
 comments: true
