--- a/_posts/2019-11-01-NOTE001.md
+++ b/_posts/2019-11-01-NOTE001.md
@@ -7,11 +7,7 @@ bigimg: /img/nobgimage.png
 comments: true
 ---
 
-회사에서 프로젝트를 진행하면서, 유니티에서 일정한 오브젝트를 주어진 트랙을 따라 움직이게 만드려고 하였다.
-
-처음에는 자동차 애니메이션으로 제작하려 하였으나,
-
-애니메이션으로 제작할 경우 다음과 같은 문제점이 있었다.
+회사에서 프로젝트를 진행하면서, 유니티에서 일정한 오브젝트를 주어진 트랙을 따라 움직이게 만드려고 하였다. 처음에는 자동차 애니메이션으로 제작하려 하였으나, 애니메이션으로 제작할 경우 다음과 같은 문제점이 있었다.
 
 
 # 문제점
