--- a/_posts/2019-11-04-NOTE002.md
+++ b/_posts/2019-11-04-NOTE002.md
@@ -7,13 +7,9 @@ bigimg: /img/nobgimage.png
 comments: true
 ---
 
-핸들과 바퀴가 자연스럽게 돌아가게 하려면 어떻게 해야할까 고민해보았다.
+핸들과 바퀴가 자연스럽게 돌아가게 하려면 어떻게 해야할까 고민해보았다. 자동차는 한번에 각도를 바꾸는게 아니라, Quaternion의 Slerp에 의해 천천히 회전하게 되므로, 자신의 예전각도와 현재각도의 차이를 계산하면 핸들이 어느정도로 틀어져야 하는지 알 수 있다.
 
-자동차는 한번에 각도를 바꾸는게 아니라, Quaternion의 Slerp에 의해 천천히 회전하게 되므로,
-
-자신의 예전각도와 현재각도의 차이를 계산하면
-
-핸들이 어느정도로 틀어져야 하는지 알 수 있다.
+# 방식
 
 먼저, 자동차와 정확히 같은 Rotation을 공유하는 Vehicle Arrow를 만든다.
 
