--- a/_posts/2019-11-11-HoloLens002.md
+++ b/_posts/2019-11-11-HoloLens002.md
@@ -7,13 +7,7 @@ bigimg: /img/nobgimage.png
 comments: true
 ---
 
-완성하지 못했던 HoloLens UI 컨트롤러를 완성하였음.
-
-주로 애니메이션에 관련된 기능이었는데,
-
-Vuforia, 일반 자료실 BCU, 일반 자료실 Hyundai, BCU Assay
-
-4종류의 오브젝트들을 모두 무리없이 소화 가능
+완성하지 못했던 HoloLens UI 컨트롤러를 완성하였음. 주로 애니메이션에 관련된 기능이었는데, Vuforia, 일반 자료실 BCU, 일반 자료실 Hyundai, BCU Assay 4종류의 오브젝트들을 모두 무리없이 소화 가능
 
 # BCU Assay Model
 
