--- a/_posts/2019-11-12-HoloLens003.md
+++ b/_posts/2019-11-12-HoloLens003.md
@@ -7,11 +7,7 @@ bigimg: /img/nobgimage.png
 comments: true
 ---
 
-기존의 3D Object를 꺼내오는 방식으로, 캐비넷 모양의 Parts Model Library와 4 X 2 그리드 테이블인 Hyundai Model Library가 있었다.
-
-오브젝트를 불러오는 객체가 2개나 존재해 Scene이 지저분해 졌고, 무엇보다 두 UI가 기존의 UI와 차이가 컸다.
-
-UI의 차이점은 통일감을 방해하는 요인으로 작용된다고 판단했으며, 이를 수정하여 통일성과 직관성을 높이고자 하였다.
+기존의 3D Object를 꺼내오는 방식으로, 캐비넷 모양의 Parts Model Library와 4 X 2 그리드 테이블인 Hyundai Model Library가 있었다. 오브젝트를 불러오는 객체가 2개나 존재해 Scene이 지저분해 졌고, 무엇보다 두 UI가 기존의 UI와 차이가 컸다. UI의 차이점은 통일감을 방해하는 요인으로 작용된다고 판단했으며, 이를 수정하여 통일성과 직관성을 높이고자 하였다.
 
 # 변경 후
 
