modify post NOTE 3

--- a/_posts/2019-11-18-NOTE003.md
+++ b/_posts/2019-11-18-NOTE003.md
@@ -7,6 +7,25 @@ bigimg: /img/bg/NOTE/bg003.png
 comments: true
 ---
 
+# DOCKER SWARM
+
+도커가 공식적으로 만든 오케스트레이션 툴이다. 오케스트레이션 툴이란 여러 호스트 서버의 컨테이너들을 배포 및 관리를 위한 툴이다. 도커 스웜을 쉽게 말하면 쿠버네티스를 대신할 도커에서 만든 컨테이너 관리를 위한 툴이다. 오케스트렐이션 툴은 컨테이너 배포뿐만 아니라 다양한 기능을 포함한다.
+
+- 컨테이너 자동 배치 및 복제
+- 컨테이너 그룹에 대한 로드밸런싱
+- 컨테이너 장애 복구
+- 클러스터 외부에 서비스 노출
+- 컨테이너 추가 또는 제거를 이용한 확장 및 축소
+- 컨테이너 서비스간의 인터페이스를 통한 연결 및 네트워크 포트 노출 제어
+
+Docker Swarm의 장점은 아래와같다.
+
+- 여러개의 Docker 호스트를 함께 클러스터링하여 단일 가상 Docker 호스트 생성
+- 호스트 OS에 Agent만 설치하면 간단하게 작동하고 설정이 쉽고 Agent를 외부에 설치하지 않는다.
+- Docker명령어와 Compose를 그대로 사용가능
+
+컨테이너 오케스트레이션 도구에는 Docker Swarm뿐만 아니라 KUBERNETES, APACHE MESOS 등이 있다.
+
 # 다른 네트워크 컴퓨터와 연결하기
 
 보통 ``` sudo docker swarm init ``` 을 하면  다음과 같은 형태의 메세지가 출력된다.
@@ -33,7 +52,7 @@ local IP Address를 사용하기 때문에 같은 공유기 내에서
 
 포트 포워딩에 대한 자세한 내용은 아래 유튜브로 대체한다.
 
-모르면 읽어보길 바란다.
+모르면 시청하길 바란다.
 
 [![image](https://user-images.githubusercontent.com/40852277/69009150-0ca36280-0996-11ea-8b44-a959e4b6a8a8.png)](https://www.youtube.com/watch?v=XT_jt0CmBbU)
 
@@ -71,11 +90,11 @@ VM ware IP가 192.168.0.10/24 이므로 게이트웨이는 192.168.0.1이다.
 
 ![image](https://user-images.githubusercontent.com/40852277/69009376-ec74a300-0997-11ea-8572-2c27cb810eb8.png)
 
-아래 사진처럼, 데스크탑은 이더넷 (유선) 으로 공유기와 물려있으며,
+아래 사진처럼, 데스크탑은 이더넷으로 (유선) 공유기와 물려있으며,
 
 ![image](https://user-images.githubusercontent.com/40852277/69009422-58efa200-0998-11ea-89c3-a11f0143f789.png)
 
-노트북은 와이파이 (무선) 으로 핫스팟과 연결되어 있는 상황이다.
+노트북은 와이파이로 (무선) 핫스팟과 연결되어 있는 상황이다.
 
 ![image](https://user-images.githubusercontent.com/40852277/69009433-6efd6280-0998-11ea-860e-92546fb43c11.png)
 
