modify post NOTE 3

--- a/_posts/2019-11-18-NOTE003.md
+++ b/_posts/2019-11-18-NOTE003.md
@@ -7,9 +7,7 @@ bigimg: /img/bg/NOTE/bg003.png
 comments: true
 ---
 
-# DOCKER SWARM
-
-도커가 공식적으로 만든 오케스트레이션 툴이다. 오케스트레이션 툴이란 여러 호스트 서버의 컨테이너들을 배포 및 관리를 위한 툴이다. 도커 스웜을 쉽게 말하면 쿠버네티스를 대신할 도커에서 만든 컨테이너 관리를 위한 툴이다. 오케스트렐이션 툴은 컨테이너 배포뿐만 아니라 다양한 기능을 포함한다.
+Docker Swarm은 도커가 공식적으로 만든 오케스트레이션 툴이다. 오케스트레이션 툴이란 여러 호스트 서버의 컨테이너들을 배포 및 관리를 위한 툴이다. 도커 스웜을 쉽게 말하면 쿠버네티스를 대신할 도커에서 만든 컨테이너 관리를 위한 툴이다. 오케스트렐이션 툴은 컨테이너 배포뿐만 아니라 다양한 기능을 포함한다.
 
 - 컨테이너 자동 배치 및 복제
 - 컨테이너 그룹에 대한 로드밸런싱
