modify MR post 002

--- a/_posts/2019-11-11-HoloLens002.md
+++ b/_posts/2019-11-11-HoloLens002.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  HoloLens 컨트롤러 UI 문제 해결
+title:  HoloLens BCU 애니메이션 정비
 tags: [HoloLens,Mixed Reality]
 image: /img/post/MR/title002.png
-bigimg: /img/nobgimage.png
+bigimg: /img/bg/MR/bg002.gif
 comments: true
 ---
 
