--- a/_posts/2019-11-27-HoloLens004.md
+++ b/_posts/2019-11-27-HoloLens004.md
@@ -7,9 +7,13 @@ bigimg: /img/bg/MR/bg004.png
 comments: true
 ---
 
-이번에 회사에서 진행하는 HoloLens to Driver Controller부분 구현과, 친한 동아리 선배와 함께 진행하는 프로젝트의 서버 부분 구현을 하게 되었는데, 이때 두 파트 동시에 Socket통신을 하도록 요구받았다. HoloLens의 경우 딱히 서버 플랫폼이 정해져 있지 않았는데, 선배와 같이 진행하는 프로젝트에서는 백엔드 플랫폼이 Node JS이므로 Node JS를 응용한 Socket 통신 서버를 구현하기로 하였다.
+이번에 회사에서 진행하는 HoloLens to Driver Controller부분 구현과, 친한 동아리 선배와 함께 진행하는 프로젝트의 서버 부분 구현을 하게 되었는데, 이때 두 파트 동시에 Socket통신을 하도록 요구받았다.
+
+HoloLens의 경우 딱히 서버 플랫폼이 정해져 있지 않았는데, 선배와 같이 진행하는 프로젝트에서는 백엔드 플랫폼이 Node JS이므로 Node JS를 응용한 Socket 통신 서버를 구현하기로 하였다.
 
 # Node JS에서의 Socket 통신
+
+<Br>
 
 ## 1 . TCP
 
@@ -75,7 +79,7 @@ socket.connect({host:ip, port:port}, function() {
 });
 ```
 
-<br><br>
+<br>
 
 ## 2 . UDP
 
@@ -125,7 +129,7 @@ socket.send(msg, 0, msg.length, 3000, '127.0.0.1',
 );
 ```
 
-<br><br>
+<br>
 
 ---
 
@@ -188,7 +192,7 @@ PC와 동기화 모듈 사이는 소켓 통신으로 진행하도록 한다.
 | Sync Msg | 9Byte | 예약 메세지. 정해진 시간에 정해진 동작을 수행한다. |
 | Async Msg | 3Byte | 즉발 메세지. 메시지를 수신하는 즉시 동작을 수행한다. |
 
-<Br><Br>
+<Br>
 
 ### Sync Msg
 
@@ -210,7 +214,7 @@ Sync Msg는 총 9Byte의 메세지로, 다음과 같이 구성된다.
 
 보내는 메시지는 ```sf7182621```이다.
 
-<Br><Br>
+<Br>
 
 ### Async Msg
 
@@ -227,6 +231,8 @@ Async Msg는 총 3Byte의 메세지로, 다음과 같이 구성된다.
 예를들어, 드라이버를 지금 즉시 멈추고 싶다면,
 
 보내는 메시지는 ```as0```이다.
+
+<Br>
 
 ### 마스터 모듈 제어기능 구현
 
