update python 001 post

--- a/_posts/2018-12-11-NOTE006.md
+++ b/_posts/2018-12-11-NOTE006.md
@@ -28,7 +28,6 @@ comments: true
 * [인트로 페이지](https://github.com/KimYC1223/KAU_HW_2018/wiki)
 * [설계 구상](https://github.com/KimYC1223/KAU_HW_2018/wiki/%EC%84%A4%EA%B3%84-%EA%B5%AC%EC%83%81)
 * [컨트롤러 제작](https://github.com/KimYC1223/KAU_HW_2018/wiki/%EC%BB%A8%ED%8A%B8%EB%A1%A4%EB%9F%AC-%EC%A0%9C%EC%9E%91)
-
 * [1차 설계 보고서](https://docs.google.com/document/d/1IeziIMAUpHRamWqDd9RJulJZECYwCsv7B4q4vper5i4/edit?usp=sharing)
 * [회의록 #1](https://docs.google.com/document/d/1_IOEhCejL1H4feS2lfN3uh_svhE7D3-NGIDvo_U_Ejk/edit?usp=sharing)
 * [최종 설계 보고서](https://docs.google.com/document/d/1KtjfvRIkFoQ65lbD0xpDLbpnWic0ljpjdskC9-0ilvI/edit?usp=sharing)
@@ -46,7 +45,17 @@ DE1_SOC 보드를 이용한 원격 전원제어장치
 ***
 
 ### 정리
-본체에 콘센트, 빵판, de1-SOC보드가 들어가게 해서 콘센트(3구)의 선중에서 1개씩 릴레이를 연결해서 빵판에다가 꽂는다. DE1-S0C상에서 GPIO의 VCC로 신호를 줄지 안줄지를 결정한다. 이때 접지를 해줘야 하므로 GND쪽으로도 연결해준다. 본체에서 USB를 꽂는 포트를 만들어서 컨트롤러를 꽂으면 컨트롤러가 되고 컨트롤러를 꽂지 않으면 KEY 인터럽트를 사용해서 직접제어를 할 수 있다. 또한 모니터에 플러그중 어느 부분이 켜져있는지 확인할 수 있으며 시간을 설정할 수 있어 얼마나 남았는지 볼 수 있게 나타낸다.
+본체에 콘센트, 빵판, de1-SOC보드가 들어가게 해서 콘센트(3구)의 선중에서 1개씩 릴레이를 연결해서 빵판에다가 꽂는다.
+
+DE1-S0C상에서 GPIO의 VCC로 신호를 줄지 안줄지를 결정한다.
+
+이때 접지를 해줘야 하므로 GND쪽으로도 연결해준다.
+
+본체에서 USB를 꽂는 포트를 만들어서 컨트롤러를 꽂으면 컨트롤러가 되고
+
+컨트롤러를 꽂지 않으면 KEY 인터럽트를 사용해서 직접제어를 할 수 있다.
+
+또한 모니터에 플러그중 어느 부분이 켜져있는지 확인할 수 있으며 시간을 설정할 수 있어 얼마나 남았는지 볼 수 있게 나타낸다.
 
 ***
 
@@ -62,18 +71,25 @@ DE1_SOC 보드를 이용한 원격 전원제어장치
 ### 시간 계획 (민우)
 
 1. 1주차
+
 KEY인터럽트를 통해서 GPIO에 연결된 LED를 키고 GPIO에 연결된 PUSH BUTTON을 통해서 DE1-SOC의 HEX에 불이켜진다.
 
 2. 2주차
-모니터에 연결해서 KEY0를 누르면 첫번째 콘센트가 켜지고 나머지 컨트롤러없이도 이미 보드상에서 돌아갈 수 있도록 했으면 좋겠음 모니터에 뜨고 키를 누르는 것에 따라 모니터의 화면이 달라지고 GPIO에 LED를 연결해서 동시에 같이 켜지는지
+
+모니터에 연결해서 KEY0를 누르면 첫번째 콘센트가 켜지고 나머지 컨트롤러없이도 이미 보드상에서 돌아갈 수 있도록 했으면 좋겠음
+
+모니터에 뜨고 키를 누르는 것에 따라 모니터의 화면이 달라지고 GPIO에 LED를 연결해서 동시에 같이 켜지는지 확인
 
 ***
 
 ### 시간 계획 (영찬)
 
 1. 1주차
+
 컨트롤러 자체 하드웨어 설계를 해서 동작이 잘되는지 보기 위해 멀티미터로 값이 들어가는지 확인한다.
+
 2. 2주차
+
 보드상에 컨트롤러를 연결해서 작동하는지 확인
 
 ---
@@ -101,8 +117,6 @@ KEY인터럽트를 통해서 GPIO에 연결된 LED를 키고 GPIO에 연결된 P
 ![image](https://user-images.githubusercontent.com/40852277/48850088-1fb73d00-edeb-11e8-8f98-04765ed83b25.png)
 
 Preamble 4 Bit + Data 4 Bit 전송 (0101)
-
-
 
 0000 숫자 0번키 / 0100 숫자 4번키 / 1000 숫자 8번키 / 1100 방향 좌 키
 
