modify python 001 post

--- a/_posts/2020-02-14-Python001.md
+++ b/_posts/2020-02-14-Python001.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  UDP 통신 기반 Parametric Body 구현 on Windows 10 (UDP Protocol based Parametric Body Estimation On Windows 10)
+title:  UDP 통신 기반 Parametric Body 구현 on Windows 10
 tags: [Python,Unity,Body-Estimation]
 image: /img/post/PYTHON/title001.png
 bigimg: /img/bg/PYTHON/bg001.png
